# prob-fx

./: .gitignore  LICENSE.md  Main.hs  README.md  benchmark.sh  cabal.project  graph.py  prob-fx.cabal  prob-fx.sh  wasabaye.cabal  wasabaye.sh
.github/workflows/: git_hygiene.yml  pull_request_template.md
benchmarking-monad-bayes/: BenchmarkPrograms.hs  BenchmarkTests.hs  Main.hs
benchmarking-turing/: hmm.jl  linregr.jl  logregr.jl
benchmarking-wasabaye/: BenchmarkPrograms.hs  BenchmarkTests.hs  Main.hs
benchmarking/monad-bayes/: BenchmarkPrograms.hs  BenchmarkTests.hs  Main.hs  mbayes-benchmarking.cabal
benchmarking/prob-fx/: BenchmarkPrograms.hs  BenchmarkTests.hs  Main.hs
benchmarking/turing/: lda.jl
benchmarking/wasabaye/: BenchmarkTests.hs
examples/: CoinFlip.hs  DataSets.hs  HMM.hs  LDA.hs  LinRegr.hs  LogRegr.hs  Main.hs  Radon.hs  SIR.hs  SIRModular.hs  SIRNonModular.hs  School.hs
examples/Test/: Expected.hs  Main.hs
src/: Env.hs  FindElem.hs  Model.hs  OpenSum.hs  PrimDist.hs  Prog.hs  STrace.hs  Sampler.hs  Trace.hs  Util.hs
src/Effects/: Dist.hs  Lift.hs  ObsReader.hs  State.hs  Writer.hs
src/Examples/: CoinFlip.hs  DataSets.hs  HMM.hs  LDA.hs  LinRegr.hs  LogRegr.hs  Radon.hs  SIR.hs  SIRModular.hs  School.hs
src/Freer/: Model.hs  STrace.hs  Trace.hs
src/Freer/Effects/: Dist.hs  Lift.hs  ObsReader.hs  State.hs  Writer.hs
src/Freer/Inference/: LW.hs  MH.hs  SIM.hs  Simulate.hs
src/Inference/: LW.hs  MH.hs  SIM.hs  Simulate.hs
