cabal-version:       3.6
name:                prob-fx
version:             0.1.0.0
license:             BSD-3-Clause
license-file:        LICENSE.md
copyright:           2022 Minh Nguyen
stability:           experimental
author:              Minh Nguyen
maintainer:          minhnguyen1995@googlemail.com
homepage:            http://github.com/min-nguyen/prob-fx
synopsis:            A library for modular probabilistic modelling
description:
  A library for probabilistic programming using algebraic effects. The
  emphasis is on modular definitions of probabilistic models, and also
  compositional implementation of model execution (inference) in terms
  of effect handlers.

category:            Statistics
build-type:          Simple

tested-with:
  GHC == 8.6.5
  GHC == 8.8.4
  GHC == 8.10.4
  GHC == 9.0.2

library
  exposed-modules:
                      Effects.Dist,
                      Effects.Lift,
                      Effects.ObsReader,
                      Effects.State,
                      Effects.Writer,
                      Inference.LW,
                      Inference.MH,
                      Inference.SIM,
                      Examples.CoinFlip,
                      Examples.DataSets,
                      Examples.HMM,
                      Examples.LDA,
                      Examples.LinRegr,
                      Examples.LogRegr,
                      Examples.Radon,
                      Examples.School,
                      Examples.SIR,
                      Examples.SIRModular,
                      Freer.Effects.Dist,
                      Freer.Effects.Lift,
                      Freer.Effects.ObsReader,
                      Freer.Effects.State,
                      Freer.Effects.Writer,
                      Freer.Inference.LW,
                      Freer.Inference.MH,
                      Freer.Inference.SIM,
                      Freer.Model,
                      Freer.Trace,
                      Env,
                      FindElem,
                      Model,
                      OpenSum,
                      PrimDist,
                      Prog,
                      Sampler,
                      Trace,
                      Util

  -- Modules included in this library but not exported.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:

  -- Other library packages from which modules are imported.
  build-depends:      base                          >= 4.11 && < 4.16,
                      ghc-prim                      >= 0.5.3 && < 0.8,
                      deepseq                       >= 1.4.4 && < 1.5,
                      containers                    >= 0.6.0 && < 0.7,
                      primitive                     >= 0.7.4 && < 0.8,
                      transformers                  >= 0.5.6 && < 0.6,
                      random                        >= 1.2.1 && < 1.3,
                      mtl                           >= 2.2.2 && < 2.3,
                      vector                        >= 0.12.3 && < 0.13,
                      dirichlet                     >= 0.1.0 && < 0.2,
                      log-domain                    >= 0.13.2 && < 0.14,
                      mwc-random                    >= 0.15.0 && < 0.16,
                      extensible                    >= 0.9 && < 0.10,
                      membership                    >= 0.0.1 && < 0.1,
                      freer-simple                  >= 1.2.1 && < 1.3,
                      lens                          >= 5.1.1 && < 5.2,
                      mwc-probability               >= 2.3.1 && < 2.4,
                      statistics                    >= 0.16.1 && < 0.17,
                      criterion                     >= 1.5.13 && < 1.6,
                      split                         >= 0.2.3 && < 0.3

  -- Directories containing source files.
  hs-source-dirs:      src

  -- Base language which the package is written in.
  default-language:    Haskell2010
  ghc-options:         -O2 -funfolding-use-threshold=16 -fexcess-precision -optc-O3 -optc-ffast-math

executable prob-fx
  -- .hs or .lhs file containing the Main module.
  main-is:             Main.hs

  -- Other library packages from which modules are imported.
  build-depends:       base,
                       prob-fx

  -- Base language which the package is written in.
  default-language:    Haskell2010
  ghc-options:         -O2 -rtsopts -funfolding-use-threshold=16 -fexcess-precision -optc-O3 -optc-ffast-math

executable benchmark
  -- .hs or .lhs file containing the Main module.
  main-is:             Main.hs

  -- Modules included in this executable, other than Main.
  other-modules:       BenchmarkPrograms,
                       BenchmarkTests


  -- Other library packages from which modules are imported.
  build-depends:       base,
                       containers,
                       criterion,
                       deepseq,
                       extensible,
                       prob-fx

  hs-source-dirs:      benchmarking/prob-fx
  -- Base language which the package is written in.
  default-language:    Haskell2010
  ghc-options:         -O2 -rtsopts -funfolding-use-threshold=16 -fexcess-precision -optc-O3 -optc-ffast-math

