cabal-version:       3.6
name:                wasabaye
version:             0.1.0.0

author:              min-nguyen
maintainer:          minhnguyen1995@googlemail.com

build-type:          Simple

library
  ghc-options:
  -- -fprint-explicit-kinds
  -- Modules exported by the library.
  exposed-modules:    Util,
                      Prog,
                      Examples.DataSets,
                      Examples.LinRegr,
                      Examples.SIR,
                      Examples.SIRModular,
                      Examples.HMM,
                      Examples.CoinFlip,
                      Examples.LogRegr,
                      Examples.LDA,
                      Examples.Radon,
                      Examples.School,
                      Effects.ObsReader,
                      Effects.Writer,
                      Effects.State,
                      Effects.Lift,
                      Model,
                      OpenSum,
                      Env,
                      FindElem,
                      Effects.Dist,
                      Sampler,
                      STrace,
                      Inference.Simulate,
                      Inference.LW,
                      Inference.MH,
                      Freer.Inference.LW,
                      Freer.Inference.MH,
                      Freer.Inference.Simulate,
                      Freer.Effects.Dist,
                      Freer.Model,
                      Freer.Effects.Lift,
                      Freer.Effects.Writer,
                      Freer.Effects.State,
                      Freer.Effects.ObsReader,
                      Freer.STrace

  -- Modules included in this library but not exported.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:

  -- Other library packages from which modules are imported.
  build-depends:       base >= 4.11 && <= 4.16,
                       ghc-prim,
                       primitive,
                       containers,
                       extensible,
                       vector,
                       lens,
                       aeson < 2,
                       transformers,
                       freer-simple,
                       HMap,
                       mtl,
                       membership,
                       profunctors,
                       statistics,
                       split,
                       mwc-random,
                       mwc-probability,
                       random,
                       dirichlet,
                       log-domain,
                       some

  -- Directories containing source files.
  hs-source-dirs:      src

  -- Base language which the package is written in.
  default-language:    Haskell2010
  ghc-options:         -O2 -funfolding-use-threshold=16 -fexcess-precision -optc-O3 -optc-ffast-math

executable wasabaye
  -- .hs or .lhs file containing the Main module.
  main-is:             Main.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:

  -- Other library packages from which modules are imported.
  build-depends:       base,
                       extensible,
                       wasabaye,
                       containers,
                       split


  -- Base language which the package is written in.
  default-language:    Haskell2010
  ghc-options:         -O2 -rtsopts -funfolding-use-threshold=16 -fexcess-precision -optc-O3 -optc-ffast-math

executable benchmarking-wasabaye
  -- .hs or .lhs file containing the Main module.
  main-is:             Main.hs

  -- Modules included in this executable, other than Main.
  other-modules:       BenchmarkPrograms,
                       BenchmarkTests

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:

  -- Other library packages from which modules are imported.
  build-depends:       base,
                       extensible,
                       wasabaye,
                       containers,
                       criterion,
                       deepseq

  hs-source-dirs:      benchmarking-wasabaye
  -- Base language which the package is written in.
  default-language:    Haskell2010
  ghc-options:         -O2 -rtsopts -funfolding-use-threshold=16 -fexcess-precision -optc-O3 -optc-ffast-math

