cabal-version:       3.6
name:                wasabaye
version:             0.1.0.0

author:              min-nguyen
maintainer:          minhnguyen1995@googlemail.com

build-type:          Simple

library
  ghc-options:
  -- -fprint-explicit-kinds
  -- Modules exported by the library.
  exposed-modules:    
                      Effects.Dist,
                      Effects.Lift,
                      Effects.ObsReader,
                      Effects.State,
                      Effects.Writer,
                      Inference.LW,
                      Inference.MH,
                      Inference.Simulate,
                      Examples.CoinFlip,
                      Examples.DataSets,
                      Examples.HMM,
                      Examples.LDA,
                      Examples.LinRegr,
                      Examples.LogRegr,
                      Examples.Radon,
                      Examples.School,
                      Examples.SIR,
                      Examples.SIRModular,
                      Freer.Effects.Dist,
                      Freer.Effects.Lift,
                      Freer.Effects.ObsReader,
                      Freer.Effects.State,
                      Freer.Effects.Writer,
                      Freer.Inference.LW,
                      Freer.Inference.MH,
                      Freer.Inference.Simulate,
                      Freer.Model,
                      Freer.STrace,
                      Env,
                      FindElem,
                      Model,
                      OpenSum,
                      Prog,
                      Sampler,
                      STrace,
                      Util

  -- Modules included in this library but not exported.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:

  -- Other library packages from which modules are imported.
  build-depends:       base >= 4.11 && <= 4.17,
                       containers,
                       dirichlet,
                       extensible,
                       freer-simple,
                       ghc-prim,
                       lens,
                       log-domain,
                       membership,
                       mtl,
                       mwc-probability,
                       mwc-random,
                       primitive,
                       random,
                       statistics,
                       transformers,
                       vector

  -- Directories containing source files.
  hs-source-dirs:      src

  -- Base language which the package is written in.
  default-language:    Haskell2010
  ghc-options:         -O2 -funfolding-use-threshold=16 -fexcess-precision -optc-O3 -optc-ffast-math

executable wasabaye
  -- .hs or .lhs file containing the Main module.
  main-is:             Main.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:

  -- Other library packages from which modules are imported.
  build-depends:       base >= 4.11 && <= 4.17,
                       containers,
                       extensible,
                       split,
                       wasabaye

  -- Base language which the package is written in.
  default-language:    Haskell2010
  ghc-options:         -O2 -rtsopts -funfolding-use-threshold=16 -fexcess-precision -optc-O3 -optc-ffast-math

executable benchmarking-wasabaye
  -- .hs or .lhs file containing the Main module.
  main-is:             Main.hs

  -- Modules included in this executable, other than Main.
  other-modules:       BenchmarkPrograms,
                       BenchmarkTests

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:

  -- Other library packages from which modules are imported.
  build-depends:       base,
                       extensible,
                       wasabaye,
                       containers,
                       criterion,
                       deepseq

  hs-source-dirs:      benchmarking-wasabaye
  -- Base language which the package is written in.
  default-language:    Haskell2010
  ghc-options:         -O2 -rtsopts -funfolding-use-threshold=16 -fexcess-precision -optc-O3 -optc-ffast-math

