cabal-version:      3.6
name:               mbayes-benchmarking
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             min-nguyen
maintainer:         minhnguyen1995@googlemail.com

-- A copyright notice.
-- copyright:
-- category:

executable mbayes-benchmarking
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    BenchmarkPrograms,
                      BenchmarkTests

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >= 4.11 && <= 4.14,
                      criterion,
                      statistics,
                      log-domain,
                      monad-bayes,
                      vector,
                      deepseq
    hs-source-dirs:   ./
    default-language: Haskell2010
